--- a/tasks/LOGIN-AUTHENTICATION/package.json
+++ b/tasks/LOGIN-AUTHENTICATION/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.1",
     "cdbreact": "^1.5.18",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
