--- a/tasks/BOOKING.COM-TASK/package.json
+++ b/tasks/BOOKING.COM-TASK/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "gsap": "^3.12.2",
+    "json-server": "^0.17.4",
     "mdb-react-ui-kit": "^6.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
@@ -20,9 +21,10 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-image-gallery": "^1.3.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "swiper": "^11.0.3",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
