--- a/tasks/BOOKING.COM-TASK/package.json
+++ b/tasks/BOOKING.COM-TASK/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.2",
     "json-server": "^0.17.4",
     "mdb-react-ui-kit": "^6.3.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
